--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -72,302 +72,87 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 4, ../sass/_main_style.scss */
+/* line 11, ../sass/_main_style.scss */
 * {
   box-sizing: border-box;
 }
 
-/* line 8, ../sass/_main_style.scss */
-body {
-  font-family: sans-serif;
+/* line 15, ../sass/_main_style.scss */
+a {
+  text-decoration: none;
 }
 
-/* line 12, ../sass/_main_style.scss */
+/* line 19, ../sass/_main_style.scss */
+body {
+  font-family: serif;
+}
+
+/* line 23, ../sass/_main_style.scss */
 p {
   line-height: 1.45em;
 }
 
 /* line 28, ../sass/_main_style.scss */
-.animate, .btn, .btn-border-o:before, .btn-border-o:after {
-  transition: all 0.5s;
+.clearfix:after {
+  display: table;
+  content: "";
+  clear: both;
 }
 
-/* line 33, ../sass/_main_style.scss */
-.btn {
-  display: inline-block;
-  line-height: 35px;
-  margin: 8px auto;
-  padding: 0 15px;
-  font-size: 15px;
+/* line 37, ../sass/_main_style.scss */
+.header {
+  background-color: #4b4a47;
+  min-height: 100vh;
+}
+/* line 40, ../sass/_main_style.scss */
+.header .header-bg {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-image: url(../images/keyvisual.jpg);
+  background-size: auto 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 0;
+  -webkit-mask-image: -webkit-gradient(linear, left top, right top, color-stop(0, transparent), color-stop(0.08, transparent), color-stop(0.23, black), color-stop(0.4, black), color-stop(0.8, black), color-stop(0.92, transparent), color-stop(1, transparent));
+}
+
+/* line 63, ../sass/_main_style.scss */
+.nav-zone {
+  padding: 0 50px;
   position: relative;
-  opacity: .999;
-  border-radius: 3px;
-  cursor: pointer;
+  z-index: 100;
 }
-
-/* line 46, ../sass/_main_style.scss */
-.btn-border-o {
-  background-color: transparent;
-  border: 1px solid #fff;
+/* line 68, ../sass/_main_style.scss */
+.nav-zone .logo-box {
+  float: left;
+  width: 220px;
+}
+/* line 72, ../sass/_main_style.scss */
+.nav-zone .logo-box img {
+  width: 100%;
+}
+/* line 77, ../sass/_main_style.scss */
+.nav-zone .navi-box {
+  float: right;
+}
+/* line 79, ../sass/_main_style.scss */
+.nav-zone .navi-box ul {
+  padding: 50px 0;
+}
+/* line 82, ../sass/_main_style.scss */
+.nav-zone .navi-box ul li {
+  display: inline-block;
+  padding: 10px 25px;
+}
+/* line 87, ../sass/_main_style.scss */
+.nav-zone .navi-box ul a {
   color: #fff;
 }
-/* line 51, ../sass/_main_style.scss */
-.btn-border-o:before, .btn-border-o:after {
-  content: '';
-  border-style: solid;
-  position: absolute;
-  z-index: 5;
-  border-radius: 3px;
-  box-sizing: content-box;
+/* line 92, ../sass/_main_style.scss */
+.nav-zone .navi-box .contact-btn {
+  background: #b28850;
+  margin: 0px 20px;
 }
-/* line 62, ../sass/_main_style.scss */
-.btn-border-o:before {
-  width: 0;
-  height: 100%;
-  border-width: 1px 0 1px 0;
-  top: -1px;
-  left: 0;
-  transition-delay: 0.05s;
-}
-/* line 71, ../sass/_main_style.scss */
-.btn-border-o:after {
-  width: 100%;
-  height: 0;
-  border-width: 0 1px 0 1px;
-  top: 0;
-  left: -1px;
-}
-/* line 81, ../sass/_main_style.scss */
-.btn-border-o:hover:before {
-  width: 100%;
-}
-/* line 85, ../sass/_main_style.scss */
-.btn-border-o:hover:after {
-  height: 100%;
-}
-/* line 94, ../sass/_main_style.scss */
-.btn-border-o.btn-green:before, .btn-border-o.btn-green:after {
-  border-color: #2ecc71;
-}
-/* line 99, ../sass/_main_style.scss */
-.btn-border-o.btn-green:hover {
-  color: #2ecc71;
-}
-/* line 94, ../sass/_main_style.scss */
-.btn-border-o.btn-blue:before, .btn-border-o.btn-blue:after {
-  border-color: #3498db;
-}
-/* line 99, ../sass/_main_style.scss */
-.btn-border-o.btn-blue:hover {
-  color: #3498db;
-}
-/* line 94, ../sass/_main_style.scss */
-.btn-border-o.btn-purple:before, .btn-border-o.btn-purple:after {
-  border-color: #9b59b6;
-}
-/* line 99, ../sass/_main_style.scss */
-.btn-border-o.btn-purple:hover {
-  color: #9b59b6;
-}
-/* line 94, ../sass/_main_style.scss */
-.btn-border-o.btn-navy:before, .btn-border-o.btn-navy:after {
-  border-color: #34495e;
-}
-/* line 99, ../sass/_main_style.scss */
-.btn-border-o.btn-navy:hover {
-  color: #34495e;
-}
-/* line 94, ../sass/_main_style.scss */
-.btn-border-o.btn-orange:before, .btn-border-o.btn-orange:after {
-  border-color: #d88740;
-}
-/* line 99, ../sass/_main_style.scss */
-.btn-border-o.btn-orange:hover {
-  color: #d88740;
-}
-/* line 94, ../sass/_main_style.scss */
-.btn-border-o.btn-red:before, .btn-border-o.btn-red:after {
-  border-color: #e74c3c;
-}
-/* line 99, ../sass/_main_style.scss */
-.btn-border-o.btn-red:hover {
-  color: #e74c3c;
-}
-
-/* line 108, ../sass/_main_style.scss */
-.landing-section {
-  height: 100vh;
-  background-color: #11141c;
-  background-image: url(../images/bg_Stars_2_1.png);
-  background-size: auto 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 15px;
-  overflow: scroll;
-  padding-top: 15vh;
-}
-/* line 119, ../sass/_main_style.scss */
-.landing-section .mask-top, .landing-section .mask-bottom {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background-image: url(../images/bg_Stars_2_1.png);
-  background-size: auto 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 3;
-  pointer-events: none;
-}
-/* line 133, ../sass/_main_style.scss */
-.landing-section .mask-top {
-  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, black), color-stop(0.2, black), color-stop(0.4, transparent), color-stop(0.65, transparent), color-stop(1, transparent));
-}
-/* line 143, ../sass/_main_style.scss */
-.landing-section .mask-bottom {
-  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, transparent), color-stop(0.1, transparent), color-stop(0.85, transparent), color-stop(0.95, black), color-stop(1, black));
-}
-/* line 153, ../sass/_main_style.scss */
-.landing-section .header {
-  position: fixed;
-  top: 15vh;
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
-  z-index: 10;
-  opacity: 0;
-  transition: all 3s;
-}
-/* line 163, ../sass/_main_style.scss */
-.landing-section .header img {
-  width: 100%;
-  max-width: 640px;
-}
-/* line 169, ../sass/_main_style.scss */
-.landing-section .header-active {
-  top: 10vh;
-  opacity: 1;
-}
-/* line 175, ../sass/_main_style.scss */
-.landing-section .main-paragraph {
-  padding-top: 100vh;
-  max-width: 480px;
-  margin: auto;
-}
-/* line 180, ../sass/_main_style.scss */
-.landing-section .main-paragraph p {
-  color: #eee;
-  padding: 12px 15px;
-}
-/* line 185, ../sass/_main_style.scss */
-.landing-section .main-paragraph .slogan {
-  padding: 45vh 15px 40vh;
-  color: #eee;
-  line-height: 1.75em;
-  text-align: center;
-}
-/* line 191, ../sass/_main_style.scss */
-.landing-section .main-paragraph .slogan p {
-  line-height: 1.8em;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 35px 0;
-  margin-bottom: 10px;
-}
-/* line 201, ../sass/_main_style.scss */
-.landing-section .mountain, .landing-section .forest, .landing-section .bushes, .landing-section .camp {
-  position: fixed;
-  bottom: 0px;
-  left: 0%;
-  pointer-events: none;
-  will-change: transform;
-  background-position: center;
-  background-size: auto 100%;
-  height: 310px;
-  width: 100%;
-  margin-bottom: -2000px;
-  border: none;
-  outline: none;
-  border-style: none;
-  background-repeat: no-repeat;
-}
-/* line 217, ../sass/_main_style.scss */
-.landing-section .mountain img, .landing-section .forest img, .landing-section .bushes img, .landing-section .camp img {
-  position: absolute;
-  width: 1400px;
-  bottom: 0px;
-  margin-left: -700px;
-  margin-bottom: -1000px;
-}
-/* line 226, ../sass/_main_style.scss */
-.landing-section .mountain {
-  z-index: 3;
-  background-image: url(../images/Mountains.png);
-  background-size: 100%;
-}
-/* line 232, ../sass/_main_style.scss */
-.landing-section .mountain img {
-  width: 1600px;
-  margin-left: -800px;
-  bottom: -180px;
-}
-/* line 238, ../sass/_main_style.scss */
-.landing-section .forest {
-  z-index: 4;
-  background-image: url(../images/Trees.png);
-}
-/* line 244, ../sass/_main_style.scss */
-.landing-section .bushes {
-  z-index: 5;
-  background-image: url(../images/Bush.png);
-  background-repeat: repeat-x;
-}
-/* line 252, ../sass/_main_style.scss */
-.landing-section .camp {
-  z-index: 3;
-  background-image: url(../images/Tent.png);
-  background-repeat: repeat-x;
-}
-
-/* line 268, ../sass/_main_style.scss */
-.second-section {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transform-origin: left bottom;
-  transform: rotate(90deg);
-  padding-top: 7vh;
-  transition: all 0.7s cubic-bezier(0.17, 0.67, 0.83, 0.67);
-}
-/* line 280, ../sass/_main_style.scss */
-.second-section .bg {
-  position: absolute;
-  top: 0px;
-  left: 150%;
-  width: 100%;
-  height: 100%;
-  background-image: url(../images/wood%20bg%202.png);
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-  background-position: center;
-  transition: all 0.5s;
-}
-/* line 294, ../sass/_main_style.scss */
-.second-section img {
-  width: 100%;
-  max-width: 1080px;
-}
-
-/* line 300, ../sass/_main_style.scss */
-.sec-active {
-  transform: rotate(90deg);
-}
-
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
