--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -85,7 +85,7 @@ p{
 
 // header
 .header{
-    background-color: #4b4a47;
+    background-color: #fff;
     min-height: 100vh;
     
     .header-bg{
@@ -96,6 +96,7 @@ p{
         left: 0px;
         height: 100%;
         width: 100%;
+        background-color: #fff;
         background-image: url(../images/KV02.jpg);
         background-size: auto 100%;
         background-position: center;
@@ -291,6 +292,7 @@ p{
 }
 
 .scroll-btn{
+    opacity: 0;
     border: solid 1px rgba(256,256,256,0.5);
     position: absolute;
     bottom: 5%;
