--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -13,6 +13,7 @@ $bg-color:#dedddc;
 
 *{
     box-sizing: border-box;
+    font-family: serif;
 }
 
 a{
@@ -26,6 +27,7 @@ body{
 p{
     line-height: 1.55em;
     letter-spacing: 0.5px;
+    font-family: serif;
 }
 
 .clearfix{
