--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -37,6 +37,7 @@
             bottom: 15%;
             right: 15%;
             margin: 0;
+            display: none;
             
             p{
                 font-size: 18px;
