--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -78,46 +78,47 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-family: serif;
 }
 
-/* line 19, ../sass/_main_style.scss */
+/* line 20, ../sass/_main_style.scss */
 a {
+  color: #fff;
   text-decoration: none;
 }
 
-/* line 23, ../sass/_main_style.scss */
+/* line 25, ../sass/_main_style.scss */
 body {
   font-family: serif;
 }
 
-/* line 27, ../sass/_main_style.scss */
+/* line 29, ../sass/_main_style.scss */
 p {
   line-height: 1.55em;
   letter-spacing: 0.5px;
   font-family: serif;
 }
 
-/* line 34, ../sass/_main_style.scss */
+/* line 36, ../sass/_main_style.scss */
 .clearfix:after {
   display: table;
   content: "";
   clear: both;
 }
 
-/* line 41, ../sass/_main_style.scss */
+/* line 43, ../sass/_main_style.scss */
 .main-container {
   text-align: center;
   padding: 60px 25px;
   background-color: #dedddc;
 }
-/* line 46, ../sass/_main_style.scss */
+/* line 48, ../sass/_main_style.scss */
 .main-container h1 {
   font-size: 28px;
   padding: 1.5em;
 }
-/* line 51, ../sass/_main_style.scss */
+/* line 53, ../sass/_main_style.scss */
 .main-container p {
   padding: 0.55em;
 }
-/* line 55, ../sass/_main_style.scss */
+/* line 57, ../sass/_main_style.scss */
 .main-container .btn {
   margin-top: 60px;
   border: solid 1px #8a2b1e;
@@ -127,17 +128,17 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 64, ../sass/_main_style.scss */
+/* line 66, ../sass/_main_style.scss */
 .main-container .btn:hover {
   background: #8a2b1e;
   color: #fff;
 }
-/* line 69, ../sass/_main_style.scss */
+/* line 71, ../sass/_main_style.scss */
 .main-container .btn:hover i {
   transform: translate(3px, 1px);
   color: #fff;
 }
-/* line 75, ../sass/_main_style.scss */
+/* line 77, ../sass/_main_style.scss */
 .main-container .btn i {
   color: #8a2b1e;
   font-size: 18px;
@@ -147,12 +148,12 @@ p {
   transition: all 0.7s;
 }
 
-/* line 89, ../sass/_main_style.scss */
+/* line 91, ../sass/_main_style.scss */
 .header {
   background-color: #fff;
   min-height: 100vh;
 }
-/* line 93, ../sass/_main_style.scss */
+/* line 95, ../sass/_main_style.scss */
 .header .header-bg {
   opacity: 0;
   transition: opacity 1.5s;
@@ -169,76 +170,76 @@ p {
   z-index: 0;
 }
 
-/* line 110, ../sass/_main_style.scss */
+/* line 112, ../sass/_main_style.scss */
 .nav-zone {
   padding: 0 35px;
   position: relative;
   z-index: 100;
 }
-/* line 115, ../sass/_main_style.scss */
+/* line 117, ../sass/_main_style.scss */
 .nav-zone:first-child {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 120, ../sass/_main_style.scss */
+/* line 122, ../sass/_main_style.scss */
 .nav-zone .logo-box {
   float: left;
   width: 220px;
 }
-/* line 124, ../sass/_main_style.scss */
+/* line 126, ../sass/_main_style.scss */
 .nav-zone .logo-box img {
   width: 100%;
 }
-/* line 128, ../sass/_main_style.scss */
+/* line 130, ../sass/_main_style.scss */
 .nav-zone .logo-box .fixed-logo {
   display: none;
 }
-/* line 133, ../sass/_main_style.scss */
+/* line 135, ../sass/_main_style.scss */
 .nav-zone .navi-box {
   float: right;
 }
-/* line 135, ../sass/_main_style.scss */
+/* line 137, ../sass/_main_style.scss */
 .nav-zone .navi-box ul {
   padding: 50px 0;
 }
-/* line 138, ../sass/_main_style.scss */
+/* line 140, ../sass/_main_style.scss */
 .nav-zone .navi-box ul li {
   display: inline-block;
   padding: 10px 15px;
   font-size: 17px;
 }
-/* line 144, ../sass/_main_style.scss */
+/* line 146, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a {
   color: #fff;
   transition: all 0.7s;
 }
-/* line 148, ../sass/_main_style.scss */
+/* line 150, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a:hover {
   color: #b28850;
 }
-/* line 154, ../sass/_main_style.scss */
+/* line 156, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn {
   background: #b28850;
   margin: 0px 20px;
   transition: all 0.7s;
   color: #eee;
 }
-/* line 161, ../sass/_main_style.scss */
+/* line 163, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn:hover {
   background: #9e6821;
   color: #fff;
 }
-/* line 166, ../sass/_main_style.scss */
+/* line 168, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn i {
   margin-right: 5px;
 }
 
-/* line 173, ../sass/_main_style.scss */
+/* line 175, ../sass/_main_style.scss */
 .no-opacity {
   opacity: 1 !important;
 }
 
-/* line 177, ../sass/_main_style.scss */
+/* line 179, ../sass/_main_style.scss */
 .fixed-nav {
   display: none;
   position: fixed;
@@ -248,65 +249,65 @@ p {
   top: 0px;
   left: 0px;
 }
-/* line 185, ../sass/_main_style.scss */
+/* line 187, ../sass/_main_style.scss */
 .fixed-nav .logo-box {
   max-width: 110px;
 }
-/* line 187, ../sass/_main_style.scss */
+/* line 189, ../sass/_main_style.scss */
 .fixed-nav .logo-box img {
   display: none;
 }
-/* line 191, ../sass/_main_style.scss */
+/* line 193, ../sass/_main_style.scss */
 .fixed-nav .logo-box .fixed-logo {
   display: block;
 }
-/* line 196, ../sass/_main_style.scss */
+/* line 198, ../sass/_main_style.scss */
 .fixed-nav .navi-box ul {
   padding: 5px 0;
 }
-/* line 200, ../sass/_main_style.scss */
+/* line 202, ../sass/_main_style.scss */
 .fixed-nav .navi-box .contact-btn {
   margin-right: 0px;
   margin-left: 10px;
 }
 
-/* line 210, ../sass/_main_style.scss */
+/* line 212, ../sass/_main_style.scss */
 .footer {
   color: #fff;
 }
-/* line 213, ../sass/_main_style.scss */
+/* line 215, ../sass/_main_style.scss */
 .footer .footer-zone {
   background-image: url(../images/10footertexture.jpg);
   background-repeat: repeat;
   padding: 35px;
 }
-/* line 220, ../sass/_main_style.scss */
+/* line 222, ../sass/_main_style.scss */
 .footer .container {
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
-/* line 226, ../sass/_main_style.scss */
+/* line 228, ../sass/_main_style.scss */
 .footer .container .box {
   text-align: center;
   padding: 10px 35px;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 232, ../sass/_main_style.scss */
+/* line 234, ../sass/_main_style.scss */
 .footer .container .box:nth-child(1) {
   text-align: right;
 }
-/* line 236, ../sass/_main_style.scss */
+/* line 238, ../sass/_main_style.scss */
 .footer .container .box:nth-child(3) {
   text-align: left;
 }
-/* line 240, ../sass/_main_style.scss */
+/* line 242, ../sass/_main_style.scss */
 .footer .container .box:nth-child(2) {
   border-right: solid 1px rgba(255, 255, 255, 0.5);
   border-left: solid 1px rgba(255, 255, 255, 0.5);
 }
-/* line 246, ../sass/_main_style.scss */
+/* line 248, ../sass/_main_style.scss */
 .footer .container .fb-btn {
   display: inline-block;
   color: #e7bd85;
@@ -318,19 +319,19 @@ p {
   transition: all 0.7s;
   margin-right: 94px;
 }
-/* line 257, ../sass/_main_style.scss */
+/* line 259, ../sass/_main_style.scss */
 .footer .container .fb-btn:hover {
   color: #b28850;
   border-color: #b28850;
 }
-/* line 264, ../sass/_main_style.scss */
+/* line 266, ../sass/_main_style.scss */
 .footer .copyright {
   background-color: #32312e;
   padding: 15px;
   text-align: center;
 }
 
-/* line 274, ../sass/_main_style.scss */
+/* line 276, ../sass/_main_style.scss */
 .slogan {
   position: absolute;
   top: 35%;
@@ -339,7 +340,7 @@ p {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 282, ../sass/_main_style.scss */
+/* line 284, ../sass/_main_style.scss */
 .slogan p {
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.35);
   font-size: 40px;
@@ -353,7 +354,7 @@ p {
   text-orientation: upright;
 }
 
-/* line 296, ../sass/_main_style.scss */
+/* line 298, ../sass/_main_style.scss */
 .scroll-btn {
   opacity: 0;
   border: solid 1px rgba(255, 255, 255, 0.5);
@@ -367,7 +368,7 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 309, ../sass/_main_style.scss */
+/* line 311, ../sass/_main_style.scss */
 .scroll-btn i {
   color: #fff;
   font-size: 36px;
@@ -375,23 +376,23 @@ p {
   opacity: 0.5;
   transition: all 0.7s;
 }
-/* line 317, ../sass/_main_style.scss */
+/* line 319, ../sass/_main_style.scss */
 .scroll-btn:hover {
   border-color: white;
 }
-/* line 320, ../sass/_main_style.scss */
+/* line 322, ../sass/_main_style.scss */
 .scroll-btn:hover i {
   opacity: 1;
   transform: translateY(3px);
 }
 
-/* line 327, ../sass/_main_style.scss */
+/* line 329, ../sass/_main_style.scss */
 .index-about-container {
   position: relative;
   overflow: hidden;
   background-image: url(../images/04paper_texture.png);
 }
-/* line 332, ../sass/_main_style.scss */
+/* line 334, ../sass/_main_style.scss */
 .index-about-container .main-box {
   position: relative;
   z-index: 1;
@@ -399,25 +400,25 @@ p {
   opacity: 0;
   transition: all 3s ease;
 }
-/* line 340, ../sass/_main_style.scss */
+/* line 342, ../sass/_main_style.scss */
 .index-about-container img {
   margin: 25px auto;
 }
-/* line 344, ../sass/_main_style.scss */
+/* line 346, ../sass/_main_style.scss */
 .index-about-container h1 {
   color: #8a2b1e;
   margin-top: 45px;
 }
-/* line 349, ../sass/_main_style.scss */
+/* line 351, ../sass/_main_style.scss */
 .index-about-container p {
   font-size: 17px;
 }
-/* line 353, ../sass/_main_style.scss */
+/* line 355, ../sass/_main_style.scss */
 .index-about-container .btn {
   margin-top: 80px;
   margin-bottom: 45px;
 }
-/* line 358, ../sass/_main_style.scss */
+/* line 360, ../sass/_main_style.scss */
 .index-about-container .bg {
   position: absolute;
   opacity: 0;
@@ -425,45 +426,45 @@ p {
   top: -80%;
   right: -15%;
 }
-/* line 366, ../sass/_main_style.scss */
+/* line 368, ../sass/_main_style.scss */
 .index-about-container .bg:last-child {
   right: auto;
   left: -15%;
   top: -10%;
 }
-/* line 371, ../sass/_main_style.scss */
+/* line 373, ../sass/_main_style.scss */
 .index-about-container .bg:last-child img {
   width: 115%;
 }
-/* line 376, ../sass/_main_style.scss */
+/* line 378, ../sass/_main_style.scss */
 .index-about-container .bg img {
   width: 100%;
 }
 
-/* line 383, ../sass/_main_style.scss */
+/* line 385, ../sass/_main_style.scss */
 .index-about-animate .main-box {
   transform: translateY(0px);
   opacity: 1;
 }
-/* line 388, ../sass/_main_style.scss */
+/* line 390, ../sass/_main_style.scss */
 .index-about-animate .bg {
   right: 0%;
   top: -87%;
   opacity: 1;
 }
-/* line 393, ../sass/_main_style.scss */
+/* line 395, ../sass/_main_style.scss */
 .index-about-animate .bg:last-child {
   right: auto;
   left: 0%;
   top: 0%;
 }
 
-/* line 401, ../sass/_main_style.scss */
+/* line 403, ../sass/_main_style.scss */
 .index-product-zone {
   background-image: url(../images/05productpattern.png);
 }
 
-/* line 405, ../sass/_main_style.scss */
+/* line 407, ../sass/_main_style.scss */
 .index-product-container {
   display: flex;
   padding: 0px;
@@ -471,24 +472,24 @@ p {
   margin: 0 auto;
   background: none;
 }
-/* line 413, ../sass/_main_style.scss */
+/* line 415, ../sass/_main_style.scss */
 .index-product-container > div {
   padding: 60px 25px;
   width: 50%;
 }
-/* line 417, ../sass/_main_style.scss */
+/* line 419, ../sass/_main_style.scss */
 .index-product-container > div:last-child {
   background-image: url(../images/07productpic.png);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-/* line 425, ../sass/_main_style.scss */
+/* line 427, ../sass/_main_style.scss */
 .index-product-container .btn {
   margin-bottom: 45px;
 }
 
-/* line 430, ../sass/_main_style.scss */
+/* line 432, ../sass/_main_style.scss */
 .index-conceptstore-container {
   background-image: url(../images/08conceptstore.jpg);
   background-size: 100%;
@@ -496,24 +497,24 @@ p {
   background-position: center;
   padding: 120px 25px 160px;
 }
-/* line 437, ../sass/_main_style.scss */
+/* line 439, ../sass/_main_style.scss */
 .index-conceptstore-container h1, .index-conceptstore-container p, .index-conceptstore-container .btn {
   color: #fff;
 }
-/* line 441, ../sass/_main_style.scss */
+/* line 443, ../sass/_main_style.scss */
 .index-conceptstore-container .btn {
   border-color: #fff;
 }
-/* line 444, ../sass/_main_style.scss */
+/* line 446, ../sass/_main_style.scss */
 .index-conceptstore-container .btn i {
   color: #fff;
 }
-/* line 448, ../sass/_main_style.scss */
+/* line 450, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover {
   background: #fff;
   color: #8a2b1e;
 }
-/* line 452, ../sass/_main_style.scss */
+/* line 454, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover i {
   color: #8a2b1e;
 }
@@ -554,8 +555,9 @@ p {
     bottom: 15%;
     right: 15%;
     margin: 0;
+    display: none;
   }
-  /* line 41, ../sass/_media.scss */
+  /* line 42, ../sass/_media.scss */
   .header .slogan p {
     font-size: 18px;
   }
