--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -13,7 +13,7 @@ $bg-color:#dedddc;
 
 *{
     box-sizing: border-box;
-    font-family: serif;
+    font-family: Serif;
 }
 
 
@@ -23,7 +23,7 @@ a{
 }
 
 body{
-    font-family: serif;
+    font-family: Serif;
 }
 
 p{
