--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -75,7 +75,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 14, ../sass/_main_style.scss */
 * {
   box-sizing: border-box;
-  font-family: serif;
+  font-family: Serif;
 }
 
 /* line 20, ../sass/_main_style.scss */
@@ -86,7 +86,7 @@ a {
 
 /* line 25, ../sass/_main_style.scss */
 body {
-  font-family: serif;
+  font-family: Serif;
 }
 
 /* line 29, ../sass/_main_style.scss */
