--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -533,21 +533,26 @@ p {
   .header .nav-zone:first-child {
     display: none;
   }
-  /* line 18, ../sass/_media.scss */
+  /* line 16, ../sass/_media.scss */
+  .header .fixed-nav {
+    opacity: 0;
+    transition: all 0.7s;
+  }
+  /* line 20, ../sass/_media.scss */
   .header .fixed-nav .logo-box {
     width: 70px;
   }
-  /* line 22, ../sass/_media.scss */
+  /* line 24, ../sass/_media.scss */
   .header .fixed-nav ul {
     display: none;
   }
-  /* line 27, ../sass/_media.scss */
+  /* line 29, ../sass/_media.scss */
   .header .header-bg {
     background-position: bottom center;
     background-size: 100%;
     background-image: url(../images/KV02-mobile.png);
   }
-  /* line 33, ../sass/_media.scss */
+  /* line 35, ../sass/_media.scss */
   .header .slogan {
     top: auto;
     left: auto;
@@ -556,7 +561,7 @@ p {
     margin: 0;
     display: none;
   }
-  /* line 41, ../sass/_media.scss */
+  /* line 43, ../sass/_media.scss */
   .header .slogan p {
     font-size: 18px;
   }
