--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -535,24 +535,25 @@ p {
   }
   /* line 16, ../sass/_media.scss */
   .header .fixed-nav {
+    display: block;
     opacity: 0;
     transition: all 0.7s;
   }
-  /* line 20, ../sass/_media.scss */
+  /* line 21, ../sass/_media.scss */
   .header .fixed-nav .logo-box {
     width: 70px;
   }
-  /* line 24, ../sass/_media.scss */
+  /* line 25, ../sass/_media.scss */
   .header .fixed-nav ul {
     display: none;
   }
-  /* line 29, ../sass/_media.scss */
+  /* line 30, ../sass/_media.scss */
   .header .header-bg {
     background-position: bottom center;
     background-size: 100%;
     background-image: url(../images/KV02-mobile.png);
   }
-  /* line 35, ../sass/_media.scss */
+  /* line 36, ../sass/_media.scss */
   .header .slogan {
     top: auto;
     left: auto;
@@ -561,7 +562,7 @@ p {
     margin: 0;
     display: none;
   }
-  /* line 43, ../sass/_media.scss */
+  /* line 44, ../sass/_media.scss */
   .header .slogan p {
     font-size: 18px;
   }
