--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -14,6 +14,7 @@
         }   
         
         .fixed-nav{
+            display: block;
             opacity: 0;
             transition: all 0.7s;
             
