--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -34,10 +34,8 @@
         }
         
         .slogan{
-            top: auto;
-            left: auto;
-            bottom: 15%;
-            right: 22%;
+            top: 55%;
+            left: 55%;
             margin: 0;
             
             p{
