--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -559,13 +559,11 @@ p {
   }
   /* line 36, ../sass/_media.scss */
   .header .slogan {
-    top: auto;
-    left: auto;
-    bottom: 15%;
-    right: 22%;
+    top: 55%;
+    left: 55%;
     margin: 0;
   }
-  /* line 43, ../sass/_media.scss */
+  /* line 41, ../sass/_media.scss */
   .header .slogan p {
     font-size: 18px;
   }
