--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,7 +1,7 @@
 @media(max-width:776px){
 
     body{
-        font-family: serif;
+        font-family: 'serif';
     }
     
     .header{
@@ -34,7 +34,7 @@
         }
         
         .slogan{
-            top: 60%;
+            top: 58%;
             left: 60%;
             margin: 0;
             
